<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@mipmap/mypic"
            android:background="@drawable/circular_image_view"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_logo_name"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:onClick="onAdminLoginTextViewLinkClick"/>

        <!--TextInputLayout for Student ID-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:textColorHint="@color/colorText"
            android:textAlignment="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextStudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:hint="@string/hint_student_id"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout for Pin-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:textColorHint="@color/colorText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_https_black_24dp"
                android:hint="@string/hint_pin"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <!--Button for login-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_corner_login_button"
            android:text="@string/text_login"
            android:textColor="@color/colorText"
            android:onClick="onLoginButtonClick"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/text_not_voter"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:onClick="onRegisterTextViewLinkClick"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkAdminLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="90dp"
            android:text="@string/text_already_admin"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:onClick="onAdminLoginTextViewLinkClick"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
