<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_interface"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegistrationActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:src="@mipmap/mypic"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <!--TextInputLayout for Full Name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextFullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_full_name"
                android:textColorHint="@color/colorText"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorText"/>
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout and LinearLayout for Voter's Level-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:textColorHint="@color/colorText">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:weightSum="1">
            <!--TextView View  and Spinner View for Voter's Level-->
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLevel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/text_level"
                android:textSize="19sp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorText"
                android:layout_weight="0.94" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerLevel"
                android:layout_width="144dp"
                android:layout_height="40dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout and LinearLayout for Voter's Gender-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:weightSum="1">
                <!--TextView View  and Spinner View for Voter's Gender-->
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewGender"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="@string/text_gender"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1.11" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout and LinearLayout for Voter's Programme-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutProgramme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:weightSum="1">
                <!--TextView View and Spinner View for Voter's Programme-->
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewProgramme"
                    android:layout_width="105dp"
                    android:layout_height="40dp"
                    android:text="@string/text_programme"
                    android:textSize="19sp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0.39"
                    android:textColor="@color/colorText"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerProgramme"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout for Student ID-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextStudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:hint="@string/hint_student_id"
                android:textColorHint="@color/colorText"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_color"/>
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout for Pin-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_https_black_24dp"
                android:hint="@string/hint_pin"
                android:textColorHint="@color/colorText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorText"/>
        </android.support.design.widget.TextInputLayout>

        <!--TextInputLayout for ConfirmPin-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:textColorHint="@color/colorText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_https_black_24dp"
                android:hint="@string/hint_confirm_pin"
                android:textColorHint="@color/colorText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/text_color"/>
        </android.support.design.widget.TextInputLayout>

        <!--Button for Sign Up-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_login_button"
            android:text="@string/text_sign_up"
            android:textColor="@color/colorText"
            android:onClick="OnRegisterButtonClick"/>

        <!--TextView for Link to Login Interface-->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_already_voter"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:onClick="onLoginActivityLinkClick"/>

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
